--- a/HW1/HW1.html
+++ b/HW1/HW1.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>HW1</title>
+    <title>CW1</title>
 </head>
 <body>
 <h1>ХАЛК</h1>
