--- a/another/index.html
+++ b/another/index.html
@@ -5,15 +5,27 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CW2</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="main">
-    <div class="one container"><p class="p_one">Your name</p></div>
-    <div class="two container"><p class="p_two">Your name</p></div>
-    <div class="three container"><p class="p_three">Your name</p></div>
-    <div class="four container"><p class="p_four">Your name</p></div>
+<div class="div">
+    <p>fffffffffffff</p>
 </div>
+<img src="" alt="">
+<ol type="A">
+    <li>csdsd
+        <br>dfdfd</li>
+</ol>
+<pre>
+    var a = 0
+    var i = a+10
+    for (i; i < 20; i++) {
+    a +=i+10
+
+    }
+    console.log(a)
+</pre>
+<script src="script.js"></script>
 </body>
 </html>
